fix(security): upgrade Spring Boot to 3.x and JDK 17; update Maven plugins and dependencies; migrate javax to jakarta; resolve Spring Core vulnerabilities (refs higress-group/himarket#72)
Change-Id: I6c1a4e2f14731614facab67d11f37b6aaffc5b37
Co-developed-by: Qoder <noreply@qoder.com>

--- a/portal-server/pom.xml
+++ b/portal-server/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>portal-server</artifactId>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -48,7 +48,7 @@
 
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
         </dependency>
 
         <dependency>
@@ -149,7 +149,6 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>2.0</version>
         </dependency>
         
         <!-- ApsaraStack CSB SDK -->
@@ -161,5 +160,14 @@
             <systemPath>${project.basedir}/lib/csb220230206-1.5.3.jar</systemPath>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
