--- a/pom.xml
+++ b/pom.xml
@@ -45,19 +45,20 @@
     </modules>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.7.18</spring-boot.version>
-        <mybatis.version>2.3.1</mybatis.version>
+        <spring-boot.version>3.3.5</spring-boot.version>
+        <mybatis.version>3.0.3</mybatis.version>
         <mariadb.version>3.4.1</mariadb.version>
         <hutool.version>5.8.32</hutool.version>
-        <bouncycastle.version>1.78</bouncycastle.version>
-        <springdoc.version>1.7.0</springdoc.version>
+        <bouncycastle.version>1.78.1</bouncycastle.version>
+        <springdoc.version>2.6.0</springdoc.version>
         <apigsdk.version>4.0.10</apigsdk.version>
         <msesdk.version>7.21.0</msesdk.version>
         <aliyunsdk.version>4.4.6</aliyunsdk.version>
         <okhttp.version>4.12.0</okhttp.version>
+        <lombok.version>1.18.30</lombok.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
@@ -103,7 +104,7 @@
 
             <dependency>
                 <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>${springdoc.version}</version>
             </dependency>
 
@@ -159,11 +160,17 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.11.0</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <release>${java.version}</release>
                         <encoding>${project.build.sourceEncoding}</encoding>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
                 </plugin>
             </plugins>
